v3/crates/metadata-resolve/tests/failing/model_permissions/disallow_duplicate_roles/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/disallow_duplicate_roles/metadata.json
---
Error: The role 'user' has been defined more than once in model permissions for model 'Albums (in subgraph subgraphs)'
    ╭─[ <unknown>:59:25 ]
    │
 59 │                 "role": "user",
    │                         ───┬──  
    │                            ╰──── This role is a duplicate
────╯
